potential mobile horizontal scroll fix

--- a/assets/styles/main.sass
+++ b/assets/styles/main.sass
@@ -71,7 +71,7 @@ html, body
   position: absolute
   top: 0
   left: 0
-  width: 100%
+  right: 0
   height: 100%
 
 .menu-wrap
